--- a/voice.ipynb
+++ b/voice.ipynb
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "agent = Agent(\n",
-    "        model=Gemini(id=\"gemini-2.0-flash\", api_key=\"AIzaSyAH5rUMI1dk_90jNNUA31Df9VS-QBZC7iw\"),\n",
+    "        model=Gemini(id=\"gemini-2.0-flash\", api_key=\"\"),\n",
     "        description=\"You are a voice-assistant model\",\n",
     "        instructions=\"include proper punctuations for good pronunciation and do not use any markdown or symbols\")"
    ]
